--- a/style/style.css
+++ b/style/style.css
@@ -1518,11 +1518,6 @@ body {
     height: 10.18vw !important;
   }
 }
-@media (min-width: 965px) {
-  .nav-wrap {
-    display: none;
-  }
-}
 @media (max-width: 965px) {
   .slider-store, .slider-block, .slider-block__carousel, .slider-block__img, .slider-block__carousel:before, .slider-block__carousel:after {
     width: calc(100vw * 0.6632) !important;
@@ -1533,8 +1528,8 @@ body {
     font-size: calc(.01947*(100vw - 720px) + 15px) !important;
   }
 
-  .common-header, .main-heading__menu-registration, .dropdown {
-    display: none !important;
+  .common-header, .nav-wrap, .main-heading__menu-registration, .dropdown {
+    display: none;
   }
 
   .nav {
@@ -1549,6 +1544,11 @@ body {
   }
 }
 @media (max-width: 795px) {
+  .three-columns:nth-child(3) .three-columns__small-news .three-columns__news-link, .three-columns:nth-child(3) .three-columns__small-news .three-columns__img, .three-columns:nth-child(2) .three-columns__small-news .three-columns__news-link, .three-columns:nth-child(2) .three-columns__small-news .three-columns__img {
+    width: 200px !important;
+    height: 115px !important;
+  }
+
   .slider-store, .slider-block, .slider-block__carousel, .slider-block__img, .slider-block__carousel:before, .slider-block__carousel:after {
     width: 100% !important;
     height: calc(.08901*(100vw - 728px) + 185px) !important;
@@ -1569,11 +1569,6 @@ body {
     text-align: center;
   }
 
-  .three-columns:nth-child(3) .three-columns__small-news .three-columns__news-link, .three-columns:nth-child(3) .three-columns__small-news .news-link__img, .three-columns:nth-child(2) .three-columns__small-news .three-columns__news-link, .three-columns:nth-child(2) .three-columns__small-news .news-link__img {
-    width: 200px !important;
-    height: 115px !important;
-  }
-
   .three-columns:nth-child(3), .three-columns:nth-child(2) {
     width: 100% !important;
   }
@@ -1586,7 +1581,7 @@ body {
     width: 68% !important;
   }
 
-  .flex-blocks {
+  .latest-news__flex-block {
     display: initial !important;
   }
 
@@ -1606,7 +1601,7 @@ body {
     display: block !important;
   }
 
-  .premium-bag {
+  .mini-store__premium-bag {
     display: -webkit-box !important;
     display: -ms-flexbox !important;
     display: flex !important;
@@ -1617,7 +1612,7 @@ body {
   }
 }
 @media (max-width: 730px) {
-  .three-columns:nth-child(3) .three-columns__small-news .three-columns__news-link, .three-columns:nth-child(3) .three-columns__small-news .news-link__img, .three-columns:nth-child(2) .three-columns__small-news .three-columns__news-link, .three-columns:nth-child(2) .three-columns__small-news .news-link__img {
+  .three-columns:nth-child(3) .three-columns__small-news .three-columns__news-link, .three-columns:nth-child(3) .three-columns__small-news .three-columns__img, .three-columns:nth-child(2) .three-columns__small-news .three-columns__news-link, .three-columns:nth-child(2) .three-columns__small-news .three-columns__img {
     width: 27.39vw !important;
     height: 15.75vw !important;
   }
@@ -1630,6 +1625,11 @@ body {
 @media (max-width: 550px) {
   .three-columns:nth-child(3) .three-columns__small-news .three-columns__news-info, .three-columns:nth-child(2) .three-columns__small-news .three-columns__news-info {
     width: 63% !important;
+  }
+}
+@media (max-width: 672px) {
+  .main-headlines__promo-title {
+    padding: 69px 0;
   }
 }
 @media (max-width: 600px) {
